[gd_scene load_steps=3 format=3 uid="uid://d0q8bb1xnm156"]

[ext_resource type="Script" path="res://scripts/GoblinMarker.gd" id="1_qnjwh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hbxr4"]

[node name="GoblinMarker" type="Area2D"]
script = ExtResource("1_qnjwh")

[node name="Location" type="Marker2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
z_index = 2
shape = SubResource("CircleShape2D_hbxr4")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
